--- a/lib/style.css
+++ b/lib/style.css
@@ -165,30 +165,40 @@
 /* Checklist Component */
 /* Radio Component */
 /* z-index */
-.mint-cell {
-    background-color:#fff;
-    box-sizing:border-box;
-    color:inherit;
-    min-height:48px;
-    display:block;
-    overflow:hidden;
-    position:relative;
-    text-decoration:none;
+.mint-cell-mask-1{
+    background-color: #000;
+    content: " ";
+    opacity: 0.5;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    position: absolute;
 }
-.mint-cell img {
-    vertical-align:middle;
+.mint-cell{
+    background-color: #fff;
+    box-sizing: border-box;
+    color: inherit;
+    min-height: 48px;
+    display: block;
+    overflow: hidden;
+    position: relative;
+    text-decoration: none;
 }
-.mint-cell:first-child .mint-cell-wrapper {
-    background-origin:border-box;
+.mint-cell img{
+    vertical-align: middle;
 }
-.mint-cell:last-child {
-    background-image:-webkit-linear-gradient(bottom, #d9d9d9, #d9d9d9 50%, transparent 50%);
-    background-image:linear-gradient(0deg, #d9d9d9, #d9d9d9 50%, transparent 50%);
-    background-size:100% 1px;
-    background-repeat:no-repeat;
-    background-position:bottom;
+.mint-cell:first-child .mint-cell-wrapper{
+    background-origin: border-box;
 }
-.mint-cell-wrapper {
+.mint-cell:last-child{
+    background-image: -webkit-linear-gradient(bottom, #d9d9d9, #d9d9d9 50%, transparent 50%);
+    background-image: linear-gradient(0deg, #d9d9d9, #d9d9d9 50%, transparent 50%);
+    background-size: 100% 1px;
+    background-repeat: no-repeat;
+    background-position: bottom;
+}
+.mint-cell-wrapper{
     background-image:-webkit-linear-gradient(top, #d9d9d9, #d9d9d9 50%, transparent 50%);
     background-image:linear-gradient(180deg, #d9d9d9, #d9d9d9 50%, transparent 50%);
     background-size: 120% 1px;
@@ -209,34 +219,35 @@
     padding: 0 10px;
     width: 100%;
 }
-.mint-cell-mask {
+.mint-cell-mask{}
+.mint-cell-mask::after{
     background-color: #000;
     content: " ";
-    opacity: 0.5;
-    top:0;
-    right:0;
-    bottom:0;
-    left:0;
+    opacity: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
     position: absolute;
 }
-.mint-cell-mask:active::after {
-    opacity:.1;
+.mint-cell-mask:active::after{
+    opacity: .1;
 }
-.mint-cell-text {
+.mint-cell-text{
     vertical-align: middle;
 }
-.mint-cell-label {
+.mint-cell-label{
     color: #888;
     display: block;
     font-size: 12px;
     margin-top: 6px;
 }
-.mint-cell-title {
+.mint-cell-title{
     -webkit-box-flex: 1;
         -ms-flex: 1;
             flex: 1;
 }
-.mint-cell-value {
+.mint-cell-value{
     color: #888;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -245,17 +256,17 @@
         -ms-flex-align: center;
             align-items: center;
 }
-.mint-cell-value.is-link {
-    margin-right:24px;
+.mint-cell-value.is-link{
+    margin-right: 24px;
 }
-.mint-cell-left {
+.mint-cell-left{
     position: absolute;
     height: 100%;
     left: 0;
     -webkit-transform: translate3d(-100%, 0, 0);
             transform: translate3d(-100%, 0, 0);
 }
-.mint-cell-right {
+.mint-cell-right{
     position: absolute;
     height: 100%;
     right: 0;
@@ -263,16 +274,16 @@
     -webkit-transform: translate3d(100%, 0, 0);
             transform: translate3d(100%, 0, 0);
 }
-.mint-cell-allow-right::after {
+.mint-cell-allow-right::after{
     border: solid 2px #c8c8cd;
     border-bottom-width: 0;
     border-left-width: 0;
     content: " ";
-    top:50%;
-    right:20px;
+    top: 50%;
+    right: 20px;
     position: absolute;
-    width:5px;
-    height:5px;
+    width: 5px;
+    height: 5px;
     -webkit-transform: translateY(-50%) rotate(45deg);
             transform: translateY(-50%) rotate(45deg);
 }
